# catfs

./: .gitignore  .travis.yml  Cargo.toml  README.md  validate_cache.sh
.github/workflows/: ci.yml
bench/: Dockerfile  bench.cat  bench.catfs  bench.catfs_over_sshfs  bench.catfs_vs_sshfs.data  bench.catsshfs  bench.data  bench.local  bench.sh  bench.sshfs  bench_format.py  bench_graph.gnuplot  run_bench.sh
src/: catfs.rs  flags.rs  lib.rs  main.rs
src/catfs/: dir.rs  error.rs  file.rs  flags.rs  inode.rs  mod.rs  rlibc.rs  substr.rs  tests.rs
src/evicter/: dir_walker.rs  mod.rs
src/pcatfs/: mod.rs
tests/: integration_tests.rs  test_suite.rs
tests/resources/dir1/: file1  file2
tests/test_suite/: mod.rs
