[package]
name = "catfs"
version = "0.2.0"
authors = ["Ka-Hing Cheung <khc@hxbc.us>"]
description = "Cache AnyThing filesystem"
keywords = ["filesystem", "fuse", "cache"]
categories = ["caching", "filesystem"]
license = "Apache-2.0"
repository = "https://github.com/kahing/catfs"

[dependencies]
backtrace = "0.3"
chan-signal = "0.2"
clap = "2.25.0"
env_logger = "0.4"
fuse = "0.3.0"
generic-array = "0.8"
itertools = "0.6"
log = "0.3"
libc = "0.2"
rand = "0.3"
sha2 = "0.6"
threadpool = "1.4"
time = "0.1"
twox-hash = "1.1"
xattr = "0.2"

[lib]
test = false
harness = false
