[package]
name = "catfs"
version = "0.8.0"
authors = ["Ka-Hing Cheung <khc@hxbc.us>"]
description = "Cache AnyThing filesystem"
keywords = ["filesystem", "fuse", "cache"]
categories = ["caching", "filesystem"]
license = "Apache-2.0"
repository = "https://github.com/kahing/catfs"
readme = "README.md"

[dependencies]
backtrace = "0.3"
chan-signal = "0.2"
clap = "2.29.0"
daemonize = "0.2"
env_logger = "0.4"
fuse = "0.3.0"
generic-array = "0.8"
itertools = "0.6"
log = "0.3"
libc = "0.2"
rand = "0.3"
sha2 = "0.6"
syslog = "3.3"
threadpool = "1.4"
time = "0.1"
twox-hash = "1.1"
xattr = "0.2"

[lib]
test = false
harness = false

[badges]
travis-ci = { repository = "kahing/catfs", branch = "master" }
