[package]
name = "catfs"
version = "0.9.0"
authors = ["Ka-Hing Cheung <khc@hxbc.us>"]
description = "Cache AnyThing filesystem"
keywords = ["filesystem", "fuse", "cache"]
categories = ["caching", "filesystem"]
license = "Apache-2.0"
repository = "https://github.com/kahing/catfs"
readme = "README.md"

[dependencies]
backtrace = "0.3"
chan-signal = "0.2"
clap = "2.29.0"
daemonize = "0.2"
env_logger = "0.4"
fd = { git = "https://github.com/stemjail/fd-rs.git", rev = "3bc3e3587f8904cce8bf29163a2021c2f5906557" }
fuser = "0.7"
generic-array = "0.8"
itertools = "0.6"
log = "0.3"
libc = "0.2.66"
rand = "0.3"
sha2 = "0.6"
syslog = "3.3"
threadpool = "1.4"
chrono = "0.4"
twox-hash = "1.5.0"
xattr = "0.2"

[lib]
test = false
harness = false

[badges]
travis-ci = { repository = "kahing/catfs", branch = "master" }
